--- a/templates/partials/_update-boundary-main-area.html
+++ b/templates/partials/_update-boundary-main-area.html
@@ -25,6 +25,10 @@
     #preview-container-wrapper.hidden-element{
         display: none;
     }
+
+    #community-boundary-update{
+        margin-top: 20px;
+    }
 </style>
 
 <script>
@@ -74,3 +78,14 @@
     <hr class="border-hr">
     </div>
 {% endif %}
+
+<div id="community-boundary-update" class="w-80">
+    <div class="flex-this space-between">
+        <div><h3 class="no-top-margin">Community Boundaries</h3></div>
+    </div>
+    <div>
+        Add your community boundaries by either searching the Native Land Digital database or uploading a shape file
+    </div>
+
+    {% include 'communities/update-boundary-via-native-land-and-shapefile.html' %}
+</div>
