--- a/templates/partials/infocards/_researcher-card.html
+++ b/templates/partials/infocards/_researcher-card.html
@@ -44,7 +44,7 @@
             class="pointer-event-none"
             src="{% static 'images/notices/ci-open-to-collaborate.png' %}"
             width="60px"
-            alt="black square with white rectangle being held by two hands in the middle"
+            alt="Open to Collaborate Notice icon. Black square with the top right corner folded and two white hands reaching toward each other from top to bottom over a white horizontal rectangle. "
           />
         </div>
         {% endif %} {% endif %}
