--- a/templates/tklabels/which-label.html
+++ b/templates/tklabels/which-label.html
@@ -8,83 +8,83 @@
 
         {% if tklabel.label_type == 'attribution' %} 
             src="{% static 'images/tk-labels/tk-attribution.png' %}" 
-            alt="TK Attribution (TK A) Label"
+            alt="TK Attribution Label icon. Black tag shape with two stacked white arrows, one pointing left and one pointing right."
         {% endif %}
         {% if tklabel.label_type == 'clan' %} 
             src="{% static 'images/tk-labels/tk-clan.png' %}" 
-            alt="TK Clan (TK CL) Label"
+            alt="TK Clan Label icon. Black tag shape with a circle made of small white dots in the center."
         {% endif %}
         {% if tklabel.label_type == 'family' %} 
             src="{% static 'images/tk-labels/tk-family.png' %}" 
-            alt="TK Family (TK F) Label"
+            alt="TK Family Label icon. Black tag shape with a circle made of alternating small and big white dots in the center."
         {% endif %}
         {% if tklabel.label_type == 'outreach' %} 
             src="{% static 'images/tk-labels/tk-outreach.png' %}" 
-            alt="TK Outreach (TK O) Label"
+            alt="TK Outreach Label icon. Black tag shape with a white hand that has two dots stretching outward from each finger."
         {% endif %}
         {% if tklabel.label_type == 'tk_multiple_community' %} 
             src="{% static 'images/tk-labels/tk-multiple-community.png' %}" 
-            alt="TK Multiple Community (TK MC) Label"
+            alt="TK Multiple Communities Label icon. Black tag shape with four white over-under woven patchworks arranged in a 2x2 square."
         {% endif %}
         {% if tklabel.label_type == 'non_verified' %} 
             src="{% static 'images/tk-labels/tk-non-verified.png' %}" 
-            alt="TK Non-Verifed (TK NV) Label"
+            alt="TK Non-Verified Label icon. Black tag shape with a white checkmark and diagonal line through it in center."
         {% endif %}
         {% if tklabel.label_type == 'verified' %} 
             src="{% static 'images/tk-labels/tk-verified.png' %}" 
-            alt="TK Verified (TK V) Label"
+            alt="TK Verified Label icon. Black tag shape with a white checkmark in center."
         {% endif %}
         {% if tklabel.label_type == 'non_commercial' %} 
             src="{% static 'images/tk-labels/tk-non-commercial.png' %}" 
-            alt="TK Non-Commercial (TK NC) Label"
+            alt="TK Non-Commercial Label icon. Black tag shape with a white dollar sign and a diagonal line through it in center."
         {% endif %}
         {% if tklabel.label_type == 'commercial' %} 
             src="{% static 'images/tk-labels/tk-commercial.png' %}" 
-            alt="TK Open to Commercialization (TK OC) Label"
+            alt="TK Open to Commercialization Label icon. Black tag shape with a white dollar sign in center."
         {% endif %}
         {% if tklabel.label_type == 'culturally_sensitive' %} 
             src="{% static 'images/tk-labels/tk-culturally-sensitive.png' %}" 
-            alt="TK Culturally Sensitive (TK CS) Label"
+            alt="TK Culturally Sensitive Label icon. Black tag shape with four hands in a circle surrounding a white cube."
         {% endif %}
         {% if tklabel.label_type == 'community_voice' %} 
             src="{% static 'images/tk-labels/tk-community-voice.png' %}" 
-            alt="TK Community Voice (TK CV) Label"
+            alt="TK Community Voice Label icon. Black tag shape with three different sized human figures in white and dialogue bubbles that overlap."
         {% endif %}
         {% if tklabel.label_type == 'community_use_only' %} 
             src="{% static 'images/tk-labels/tk-community-use-only.png' %}" 
-            alt="TK Community Use Only (TK CO) Label"
+            alt="TK Community Use Only Label icon. Black tag shape with four criss-crossed white lines in center."
         {% endif %}
         {% if tklabel.label_type == 'seasonal' %} 
             src="{% static 'images/tk-labels/tk-seasonal.png' %}" 
-            alt="TK Seasonal (TK S) Label"
+            alt="TK Seasonal Label icon. Black background with simple illustrations of a tree with bare branches and another tree with a circle representing leaves."
         {% endif %}
         {% if tklabel.label_type == 'women_general' %} 
             src="{% static 'images/tk-labels/tk-women-general.png' %}" 
-            alt="TK Women General (TK WG) Label"
+            alt="TK Women General Label icon. Black tag shape with a white figure made up of a triangle on bottom and circle on top."
         {% endif %}
         {% if tklabel.label_type == 'men_general' %} 
             src="{% static 'images/tk-labels/tk-men-general.png' %}" 
-            alt="TK Men General (TK MG) Label"
+            alt="TK Men General Label icon. Black tag shape with a white figure made up of a square on bottom and circle on top."
         {% endif %}
         {% if tklabel.label_type == 'men_restricted' %} 
             src="{% static 'images/tk-labels/tk-men-restricted.png' %}" 
-            alt="TK Men Restricted (TK MR) Label"
+            alt="TK Men Restricted Label icon. Black tag shape with two white figures made up of two squares on bottom and two circles on top with a double-sided arrow connecting both figures."
         {% endif %}
         {% if tklabel.label_type == 'women_restricted' %} 
             src="{% static 'images/tk-labels/tk-women-restricted.png' %}" 
-            alt="TK Women Restricted (TK WR) Label"
+            alt="TK Women Restricted Label icon. Black tag shape with two white figures made up of two triangles on bottom and two circles on top with a double-sided arrow connecting both figures."
         {% endif %}
         {% if tklabel.label_type == 'secret_sacred' %} 
             src="{% static 'images/tk-labels/tk-secret-sacred.png' %}" 
-            alt="TK Secret Sacred (TK SS) Label"
+            alt="TK Secret / Sacred Label icon. Black tag shape with a large white cube in center."
         {% endif %}
         {% if tklabel.label_type == 'open_to_collaboration' %} 
             src="{% static 'images/tk-labels/tk-open-to-collaboration.png' %}" 
-            alt="TK Open to Collaboration (TK CB) Label"
+            alt="TK Open to Collaboration Label icon. Black tag shape with three white overlapping figures in center made up of hexagons on bottom and circles on top."
         {% endif %}
         {% if tklabel.label_type == 'creative' %} 
             src="{% static 'images/tk-labels/tk-creative.png' %}" 
-            alt="TK Creative (TK CR) Label"
+            alt="TK Creative Label icon. Black tag shape with a white circle made up of eight small dots on one half, a solid line on the other half, and each half bifurcated with two bigger dots."
         {% endif %}
     >
 </div>
