--- a/templates/bclabels/tiny-labels.html
+++ b/templates/bclabels/tiny-labels.html
@@ -7,43 +7,43 @@
         
         {% if bclabel.label_type == 'commercialization'%}
             src="{% static 'images/bc-labels/bc-open-to-commercialization.png' %}" 
-            alt="BC Open to Commercialization (BC OC) Label"
+            alt="BC Open to Commercialization Label icon. Black tag shape with a white dollar sign in center. On left side are three white dots."
         {% endif %}
         {% if bclabel.label_type == 'provenance' %}
             src="{% static 'images/bc-labels/bc-provenance.png' %}"
-            alt="BC Provenance (BC P) Label"
+            alt="BC Provenance Label icon. Black tag shape with six perpendicular white lines of increasing width. On left side are three white dots."
         {% endif %}
         {% if bclabel.label_type == 'collaboration' %}
             src="{% static 'images/bc-labels/bc-open-to-collaboration.png' %}" 
-            alt="BC Open to Collaboration (BC CB) Label"
+            alt="BC Open to Collaboration Label icon. Black tag shape with three white overlapping figures in center made up of hexagons on bottom and circles on top. On left side are three white dots."
         {% endif %}
         {% if bclabel.label_type == 'consent_verified' %}
             src="{% static 'images/bc-labels/bc-consent-verified.png' %}" 
-            alt="BC Consent Verified (BC CV) Label"
+            alt="BC Consent Verified Label icon. Black tag shape with a white checkmark in center. On left side are three white dots."
         {% endif %}
         {% if bclabel.label_type == 'multiple_community' %}
             src="{% static 'images/bc-labels/bc-multiple-community.png' %}" 
-            alt="BC Multiple Communities (BC MC) Label"
+            alt="BC Multiple Communities Label icon. Black tag shape with four white over-under woven patchworks arranged in a 2x2 square. On left side are three white dots."
         {% endif %}
         {% if bclabel.label_type == 'research' %}
             src="{% static 'images/bc-labels/bc-research-use.png' %}" 
-            alt="BC Research Use (BC R) Label"
+            alt="BC Research Use Label icon. Black tag shape with four rectangles inside two concentric circles. On left side are three white dots."
         {% endif %}
         {% if bclabel.label_type == 'non_commercial' %}
             src="{% static 'images/bc-labels/bc-non-commercial.png' %}" 
-            alt="BC Non-Commercial (BC NC) Label"
+            alt="BC Non-Commercial Label icon. Black tag shape with a white dollar sign and a diagonal line through it in center. On left side are three white dots."
         {% endif %}
         {% if bclabel.label_type == 'consent_non_verified' %}
             src="{% static 'images/bc-labels/bc-consent-non-verified.png' %}" 
-            alt="BC Consent Non-Verified (BC CNV) Label"
+            alt="BC Consent Non-Verified Label icon. Black tag shape with a white checkmark and a diagonal line through it in the center. On left side are three white dots."
         {% endif %}
         {% if bclabel.label_type == 'clan' %}
             src="{% static 'images/bc-labels/bc-clan.png' %}" 
-            alt="BC Clan (BC CL) Label"
+            alt="BC Clan Label icon. Black tag shape with a circle made of small white dots in center. On left side are three larger white dots."
         {% endif %}
         {% if bclabel.label_type == 'outreach' %}
             src="{% static 'images/bc-labels/bc-outreach.png' %}" 
-            alt="BC Outreach (BC O) Label"
+            alt="BC Outreach Label icon. Black tag shape with a white hand that has two dots stretching outward from each finger. On left side are three white dots."
         {% endif %}
     >
 </div>
