--- a/templates/partials/_project-actions.html
+++ b/templates/partials/_project-actions.html
@@ -265,11 +265,11 @@
                             <div>
                                 <div class="margin-top-16">
                                     {% if notice.notice_type == 'biocultural' %}
-                                    <img class="pointer-event-none" loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="black square with white letters BC in the middle">
+                                    <img class="pointer-event-none" loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="BC Notice icon. Black background with the top right corner folded and the letters “BC” in white in center.">
                                     {% elif notice.notice_type == 'traditional_knowledge' %}
-                                    <img class="pointer-event-none" loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="black square with white letters TK in the middle">
+                                    <img class="pointer-event-none" loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center.">
                                     {% else  %}
-                                    <img class="pointer-event-none" loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="black square with an unfinished square in the middle in white">
+                                    <img class="pointer-event-none" loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="Attribution Incomplete Notice icon. Black square with the top right corner folded and a white square in center with left side in solid line and right side in dotted line.">
                                     {% endif %}
                                 </div>
                                 <p>
