--- a/templates/partials/_project-contributor-view.html
+++ b/templates/partials/_project-contributor-view.html
@@ -24,7 +24,7 @@
 
                     {% if notice.notice_type == 'biocultural' %}
                         <div class="flex-this border-top-solid-teal border-bottom-solid-teal">
-                            <div class="w-15 pad-top-1"><img loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="black square with white letters BC in the middle"></div>
+                            <div class="w-15 pad-top-1"><img loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="BC Notice icon. Black background with the top right corner folded and the letters “BC” in white in center."></div>
                             <div class="w-80 pad-top-1">
                                 <h3 class="no-top-margin">Biocultural Notice</h3>
                                 <p>{{ notice.default_text}}</p>
@@ -34,7 +34,7 @@
 
                     {% if notice.notice_type == 'traditional_knowledge' %}
                         <div class="flex-this border-top-solid-teal border-bottom-solid-teal">
-                            <div class="w-15 pad-top-1"><img loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="black square with white letters TK in the middle"></div>
+                            <div class="w-15 pad-top-1"><img loading="lazy" src="{{ notice.img_url }}" width="78" height="78" alt="TK Notice icon. Black background with the top right corner folded and the letters “TK” in white in center."></div>
                             <div class="w-80 pad-top-1">
                                 <h3 class="no-top-margin">Traditional Knowledge Notice</h3>
                                 <p>{{ notice.default_text}}</p>
@@ -44,7 +44,7 @@
 
                     {% if notice.notice_type == 'attribution_incomplete' %}
                         <div class="flex-this border-top-solid-teal border-bottom-solid-teal">
-                            <div class="w-15 pad-top-1"><img loading="lazy" src="{{ notice.img_url }}" alt="black square with an unfinished square in the middle in white" width="78" height="78"></div>
+                            <div class="w-15 pad-top-1"><img loading="lazy" src="{{ notice.img_url }}" alt="Attribution Incomplete Notice icon. Black square with the top right corner folded and a white square in center with left side in solid line and right side in dotted line." width="78" height="78"></div>
                             <div class="w-80 pad-top-1">
                                 <h3 class="no-top-margin">Attribution Incomplete Notice</h3>
                                 <p>{{ notice.default_text}}</p>
