Removed typing error

--- a/templates/communities/select-label.html
+++ b/templates/communities/select-label.html
@@ -412,7 +412,7 @@
                         <div class="toggle-txt-color grey-text"><p>TK Non-Verified <br> (TK NV) </p></div>
                     </div>
                     <div class="center-text w-15 margin-left-1 margin-right-1">
-                        <div class="image-container pointer" onclick="expandTKLabel(event.target.querySelector('img'))"><img loading="lazy" id="tks" class="default-label-img pointer-event-none" src="{% static 'images/tk-labels/tk-seasonal.png' %}" alt="TK Seasonal Label icon. Black background with simple illustrations of a tree with bare branches and another tree with a circle representing leaves.></div>
+                        <div class="image-container pointer" onclick="expandTKLabel(event.target.querySelector('img'))"><img loading="lazy" id="tks" class="default-label-img pointer-event-none" src="{% static 'images/tk-labels/tk-seasonal.png' %}" alt="TK Seasonal Label icon. Black background with simple illustrations of a tree with bare branches and another tree with a circle representing leaves."></div>
                         <div class="toggle-txt-color grey-text"><p>TK Seasonal <br> (TK S) </p></div>
                     </div>
     
