feat: removed old code from when a single boundary attribute stored multiple boundaries

--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -244,7 +244,7 @@
                 const payload = {
                     source: url,
                     name: boundary.properties.Name,
-                    boundary: [boundaryCoordinates]
+                    boundary: boundaryCoordinates
                 }
 
                 // do post call to set boundary in request
