update css class for links in 403, 500, login, create community, confirm account, newsletter subscription

--- a/templates/accounts/confirm-account.html
+++ b/templates/accounts/confirm-account.html
@@ -73,7 +73,7 @@
         <div class="flex-this space-between">
             <div>
                 <p>
-                    For more information about this step, <a href="https://localcontexts.org/support/getting-started-on-the-hub/#confirmation-step" class="underline-hover darkteal-text">see our website</a>.
+                    For more information about this step, <a href="https://localcontexts.org/support/getting-started-on-the-hub/#confirmation-step" class="default-a">see our website</a>.
                 </p>
             </div>
 
