--- a/templates/accounts/newsletter-subscription.html
+++ b/templates/accounts/newsletter-subscription.html
@@ -87,7 +87,7 @@
                                                         <i class="fa-solid fa-circle-check successfulicon-color"></i>&nbsp; Thank you for subscribing!
                                                     </p>
                                                     <p>
-                                                        <a class="a darkteal-text"  href="{% url 'newsletter-unsubscription' emailb64=emailb64 %}">Click here</a> if you want to unsubscribe or change the preferences.
+                                                        <a class="default-a"  href="{% url 'newsletter-unsubscription' emailb64=emailb64 %}">Click here</a> if you want to unsubscribe or change the preferences.
                                                     </p>
                                                 </div>
                                             {% endif %}
