--- a/templates/403.html
+++ b/templates/403.html
@@ -5,7 +5,7 @@
             <div class="w-30 center-text"><img loading="lazy" src="{% static 'images/logos/logo-404.png' %}" alt="404 Local Contexts round logo"></div>
             <div class="w-70">
                 <div><h1 class="orange-text">403 Forbidden</h1></div>
-                <div><p>You do not have sufficient permissions to view this page. <br>Contact us at <a href="mailto:support@localcontexts.org" class="darkteal-text">support@localcontexts.org</a><br><br>  <strong>Error Code: 403 Forbidden</strong></p></div>
+                <div><p>You do not have sufficient permissions to view this page. <br>Contact us at <a href="mailto:support@localcontexts.org" class="default-a">support@localcontexts.org</a><br><br>  <strong>Error Code: 403 Forbidden</strong></p></div>
             </div>
         </div>
     </div>
