--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -25,7 +25,7 @@
                 <input type="password" name="password" required>
             </div>
             <div>
-                <a href="{% url 'reset_password'%}" class="darkteal-text underline-hover bold">Forgot your password?</a>
+                <a href="{% url 'reset_password'%}" class="default-a">Forgot your password?</a>
             </div> 
             <div class="flex-this column margin-top-2">
                 <div class="w-100"> 
