feat: user can pick boundary via native land on community settings page

--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -30,6 +30,7 @@
             border-radius: 2px;
             border-top: transparent;
             z-index: 1;
+            background: white;
         }
         .result-item{
             padding-top: 5px;
