feat: used default-a class for Native Land Digital link

--- a/templates/communities/add-community-boundary.html
+++ b/templates/communities/add-community-boundary.html
@@ -106,7 +106,7 @@
             Search the Native Land Digital database to select your community’s boundary.
             After making a selection, view the location on Native Land Digital’s website to confirm
             the selected boundary is appropriate. If your boundary is not appropriate,
-            please contact <a href="https://native-land.ca/contact/" target="_blank">Native Land Digital</a>.
+            please contact <a class="default-a" href="https://native-land.ca/contact/" target="_blank">Native Land Digital</a>.
         </p>
         <div id="navigate-to-option">
             Or <a class="default-a" href="{% url 'upload-boundary-file' %}">upload shapefile</a>
