Removed g-auth from prod

--- a/templates/settings-base.html
+++ b/templates/settings-base.html
@@ -36,7 +36,7 @@
         </div>
       </a>
 
-      <a class="side-nav-a" href="{% url 'link-account' %}">
+      <!-- <a class="side-nav-a" href="{% url 'link-account' %}">
         <div
           class="side-nav-item {% if 'link-account' in request.path %} selected {% else %} grey-text {% endif %}"
         >
@@ -47,7 +47,7 @@
             </p>
           </div>
         </div>
-      </a>
+      </a> -->
 
       <a class="side-nav-a" href="{% url 'change-password' %}">
         <div
