--- a/templates/accounts/register.html
+++ b/templates/accounts/register.html
@@ -131,14 +131,14 @@
         </div>
       </div>
 
-        <div class="flex-this justify-center align-center gap-1">
+        <!-- <div class="flex-this justify-center align-center gap-1">
             <div class="horizental-line"> </div>
         <p>or</p>
         <div class="horizental-line"> </div>
         </div>
         <div class="flex-this">
             <a class="w-100 white-btn flex-this align-center justify-center" href="{% provider_login_url 'google' %}"><img class="margin-right-1" src="{% static 'images/logos/google.png' %}" alt=""><span class="margin-left-1 primary-black-text">Register With Google</span></a>
-        </div>
+        </div> -->
         {% include 'partials/_alerts.html' %}
     </div>
   </form>
