feat: added content changes; changed boundaries to boundary in text

--- a/templates/communities/update-boundary-via-native-land-and-shapefile.html
+++ b/templates/communities/update-boundary-via-native-land-and-shapefile.html
@@ -193,7 +193,7 @@
                 href="{% url 'confirm-community' %}"
                 onclick="event.preventDefault()"
             >
-                Change Boundaries
+                Change Boundary
             </a>
         </div>
         <div id="skip-this-step">
